--- a/index.html
+++ b/index.html
@@ -1,84 +1,248 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Gede Satya</title>
-<script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet"/>
-<script>
-        tailwind.config = {
-            darkMode: "class",
-            theme: {
-                extend: {
-                    colors: {
-                        primary: "#3b82f6", // A standard blue that works well on dark backgrounds
-                        "background-light": "#f3f4f6",
-                        "background-dark": "#0f1115", // Very dark background like the screenshot
-                        "card-dark": "#181a20",
-                    },
-                    fontFamily: {
-                        display: ["Inter", "sans-serif"],
-                        body: ["Inter", "sans-serif"],
-                    },
-                    borderRadius: {
-                        DEFAULT: "0.5rem",
-                    },
-                },
-            },
-        };
-    </script>
-<style>
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-    </style>
-</head>
-<body class="bg-background-light dark:bg-background-dark text-gray-900 dark:text-gray-100 h-screen flex flex-col items-center justify-center transition-colors duration-300">
-<div class="absolute top-4 right-4">
-<button class="p-2 rounded-full bg-gray-200 dark:bg-gray-800 text-gray-800 dark:text-gray-200 hover:bg-gray-300 dark:hover:bg-gray-700 transition-colors" id="theme-toggle">
-<span class="material-icons-round dark:hidden">dark_mode</span>
-<span class="material-icons-round hidden dark:block">light_mode</span>
-</button>
-</div>
-<main class="w-full max-w-md px-6 flex flex-col items-center gap-8">
-<div class="flex items-center gap-4 animate-fade-in-down">
-<div class="relative group">
-<div class="absolute -inset-0.5 bg-primary/30 rounded-full blur opacity-50 group-hover:opacity-100 transition duration-500"></div>
-<img alt="Anime character avatar representing Gede Satya" class="relative w-20 h-20 rounded-full object-cover border-2 border-gray-200 dark:border-gray-700 shadow-lg" src="https://photos.app.goo.gl/AkEiZY81tfmVW3KM6"/>
-</div>
-<h1 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">
-                Gede Satya
-            </h1>
-</div>
-<p class="text-center text-gray-600 dark:text-gray-400 max-w-xs mx-auto">
-            Temukan rahasia yang tersembunyi.
-        </p>
-<button class="group relative w-full flex justify-center py-4 px-8 border border-transparent text-sm font-bold rounded-lg text-white bg-primary hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary focus:ring-offset-background-light dark:focus:ring-offset-background-dark transition-all duration-200 shadow-[0_0_20px_rgba(59,130,246,0.3)] hover:shadow-[0_0_30px_rgba(59,130,246,0.5)] transform hover:-translate-y-0.5" onclick="triggerPrank()">
-<span class="flex items-center gap-2 uppercase tracking-wider">
-<span class="material-icons-round text-lg">chat</span>
-                DAPATKAN NOMOR WHATSAPP
-            </span>
-</button>
-<footer class="mt-12 text-center text-xs text-gray-400 dark:text-gray-600">
-<p>© 2023 Prank Network. Just for fun.</p>
-</footer>
-</main>
-<script>
-        // Simple theme toggle logic
-        const toggleButton = document.getElementById('theme-toggle');
-        const htmlElement = document.documentElement;
-        // Set initial theme based on system preference
-        if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-            htmlElement.classList.add('dark');
-        }
-        toggleButton.addEventListener('click', () => {
-            htmlElement.classList.toggle('dark');
-        });
-        function triggerPrank() {
-            // Simple visual feedback for the prank
-            alert("Kena prank! 😂");
-        }
-    </script>
+<html lang="id">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>⛏️ FALENCRAFT SMP | STORE</title>
 
-</body></html>
+<!-- Font Minecraft untuk judul -->
+<link href="https://fonts.cdnfonts.com/css/minecrafter" rel="stylesheet">
+
+<style>
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: url('https://i.pinimg.com/originals/80/a1/91/80a1914281063a704f33e7606a119f1e.gif') no-repeat center center fixed;
+    background-size: cover;
+    color: white;
+    text-align: center;
+}
+
+h1 {
+    font-family: 'Minecrafter', sans-serif;
+    font-size: 3em;
+    margin-top: 30px;
+    margin-bottom: 15px;
+    text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+}
+
+h1 .falencraft { color: orange; }
+h1 .smp, h1 .store { color: white; }
+
+#playerNameDisplay input {
+    width: 300px;
+    padding: 10px;
+    border-radius: 8px;
+    border: none;
+    font-size: 16px;
+    background: rgba(0,0,0,0.6);
+    color: #00ff66;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+form { display:flex; flex-direction:column; align-items:center; margin-bottom:20px; }
+
+.input-group { display:flex; align-items:center; margin-bottom:10px; position:relative; }
+
+select {
+    padding:10px; border-radius:5px; border:none; font-size:16px; margin-right:10px;
+}
+
+.input-wrapper { position:relative; width:250px; }
+
+.input-wrapper::before { content:""; position:absolute; top:0; left:0; width:2px; height:100%; background:white; }
+
+input[type=text] {
+    width:100%;
+    padding:10px 10px 10px 25px;
+    font-size:16px;
+    border:2px solid white;
+    border-left:none;
+    border-radius:0 5px 5px 0;
+    background:transparent;
+    color:white;
+    outline:none;
+    position:relative;
+    z-index:1;
+}
+
+.dot { position:absolute; top:50%; left:15px; transform:translateY(-50%); color:white; font-weight:bold; pointer-events:none; z-index:2; }
+
+button { background:#ff9800; font-weight:bold; padding:10px 20px; border-radius:5px; border:none; cursor:pointer; margin-top:10px; transition:.3s; }
+button:hover { background:#e68a00; }
+
+.rank-list { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:20px; }
+
+.rank-card {
+    background: rgba(0,0,0,0.6);
+    border-radius: 10px;
+    padding: 15px;
+    width: 250px;
+    box-shadow: 0 0 10px #000;
+    text-align: center;
+}
+
+.rank-card h2 { color:#ff9800; margin:10px 0; font-size:1.2em; }
+
+.features { text-align:left; margin-bottom:10px; }
+.features p { margin:3px 0; }
+
+.buy-btn {
+    display:block;
+    background:#ff9800;
+    color:#000;
+    font-weight:bold;
+    padding:10px;
+    border-radius:5px;
+    cursor:pointer;
+    text-decoration:none;
+    transition:.3s;
+}
+.buy-btn:hover { background:#e68a00; }
+
+</style>
+</head>
+<body>
+
+<h1>⛏️ <span class="falencraft">FALENCRAFT</span><span class="smp">SMP</span> | <span class="store">STORE</span></h1>
+
+<!-- Form Input Minecraft -->
+<div id="mcFormDiv">
+<form id="playerForm">
+<div class="input-group">
+<select id="mcEdition">
+<option value="java">Java Edition</option>
+<option value="bedrock">Bedrock Edition</option>
+</select>
+<div class="input-wrapper">
+<span class="dot" id="dot" style="display:none;">.</span>
+<input type="text" id="mcName" placeholder="Masukkan Nama Minecraft" required>
+</div>
+</div>
+<button type="submit">Lanjut</button>
+</form>
+</div>
+
+<!-- Nama Minecraft tampil setelah Lanjut -->
+<div id="playerNameDisplay" style="display:none;"></div>
+
+<!-- List Rank -->
+<div id="rankList" class="rank-list" style="display:none;">
+<div class="rank-card" data-rank="VIP" data-price="Rp15K">
+<h2>VIP - Rp15K</h2>
+<div class="features">
+<p>✔ Feed</p>
+<p>✔ Heal</p>
+<p>✔ Anvil</p>
+<p>✔ Workbench</p>
+<p>✔ Repair</p>
+<p>✔ Enderchest</p>
+<p>✔ Blocklimit 15k x 15k</p>
+<p>✔ Claimlimit 6x</p>
+<p>✔ Sethome 5x</p>
+</div>
+<button class="buy-btn">Beli Sekarang</button>
+</div>
+
+<div class="rank-card" data-rank="EPIC" data-price="Rp35K">
+<h2>EPIC - Rp35K</h2>
+<div class="features">
+<p>✔ Feed</p>
+<p>✔ Heal</p>
+<p>✔ Anvil</p>
+<p>✔ Workbench</p>
+<p>✔ Repair</p>
+<p>✔ Enderchest</p>
+<p>✔ Fly</p>
+<p>✔ Blocklimit 35k x 35k</p>
+<p>✔ Claimlimit 9x</p>
+<p>✔ Sethome 10x</p>
+</div>
+<button class="buy-btn">Beli Sekarang</button>
+</div>
+
+<div class="rank-card" data-rank="LEGEND" data-price="Rp60K">
+<h2>LEGEND - Rp60K</h2>
+<div class="features">
+<p>✔ Feed</p>
+<p>✔ Heal</p>
+<p>✔ Anvil</p>
+<p>✔ Workbench</p>
+<p>✔ Repair</p>
+<p>✔ Enderchest</p>
+<p>✔ Fly</p>
+<p>✔ Tp</p>
+<p>✔ Time set</p>
+<p>✔ Blocklimit 70k x 70k</p>
+<p>✔ Claimlimit 12x</p>
+<p>✔ Sethome 20x</p>
+</div>
+<button class="buy-btn">Beli Sekarang</button>
+</div>
+
+<div class="rank-card" data-rank="MYTHICAL" data-price="Rp100K">
+<h2>MYTHICAL - Rp100K</h2>
+<div class="features">
+<p>✔ Feed</p>
+<p>✔ Heal</p>
+<p>✔ Anvil</p>
+<p>✔ Workbench</p>
+<p>✔ Repair</p>
+<p>✔ Enderchest</p>
+<p>✔ Fly</p>
+<p>✔ God</p>
+<p>✔ Tp</p>
+<p>✔ Time set</p>
+<p>✔ Blocklimit 100k x 100k</p>
+<p>✔ Claimlimit 20x</p>
+<p>✔ Sethome 35x</p>
+</div>
+<button class="buy-btn">Beli Sekarang</button>
+</div>
+
+</div>
+
+<script>
+const mcInput = document.getElementById('mcName');
+const mcSelect = document.getElementById('mcEdition');
+const dot = document.getElementById('dot');
+
+mcSelect.addEventListener('change', function() {
+    if(mcSelect.value === "bedrock") {
+        dot.style.display = "inline";
+        mcInput.style.paddingLeft = "25px";
+    } else {
+        dot.style.display = "none";
+        mcInput.style.paddingLeft = "10px";
+    }
+});
+
+document.getElementById('playerForm').addEventListener('submit', function(e){
+    e.preventDefault();
+    const name = mcInput.value.trim();
+    const finalName = (mcSelect.value==="bedrock") ? "."+name : name;
+    localStorage.setItem('mcPlayer', finalName);
+    document.getElementById('playerNameDisplay').innerHTML = `<input type="text" value="${finalName}" readonly>`;
+    document.getElementById('playerNameDisplay').style.display="block";
+    document.getElementById('mcFormDiv').style.display="none";
+    document.getElementById('rankList').style.display="flex";
+});
+
+// Tombol Beli Sekarang → WhatsApp
+document.querySelectorAll('.buy-btn').forEach(btn=>{
+    btn.addEventListener('click', function(){
+        const card=this.closest('.rank-card');
+        const rank=card.dataset.rank;
+        const price=card.dataset.price;
+        const mcPlayer=localStorage.getItem('mcPlayer') || "Tidak Diketahui";
+        const waNumber = "+6287845203865";
+        const message = `Nama Minecraft: ${mcPlayer}\nRank yang Dibeli: ${rank}\nHarga: ${price}`;
+        const url = `https://wa.me/${waNumber}?text=${encodeURIComponent(message)}`;
+        window.open(url,"_blank");
+    });
+});
+</script>
+
+</body>
+</html>
